base/src/test/resources/failure/tyck/nonstruct-new.aya.txt
In file $FILE:1:12 ->

  1 | def test => new Type {}
                  ^---------^

Error: Unable to construct the expression
         new Type {  }
       because the type you gave is not a struct type, but instead:
         Type
         (Normalized: Type)
What are you doing?
